--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <body class="page__body">
     <div class="site-container">
       @include('partials/header.html')
-      <main class="main"></main>
+      <main class="main">
+        @include('partials/hero.html')
+        @include('partials/contact-form.html')
+      </main>
 
       @include('partials/footer.html')
     </div>
